[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/ChoicePolygon.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontStd.tres" type="DynamicFont" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.517632, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hover"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 25.0, -10.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:idle_x")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, -1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:idle_y")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hover"
tracks/0/type = "value"
tracks/0/path = NodePath(".:hover_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hover_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 55, 15 )

[node name="ChoiceButton" type="Polygon2D"]
position = Vector2( 55, 15 )
scale = Vector2( 1e-005, 1e-005 )
z_index = 1500
color = Color( 0, 0, 0, 1 )
offset = Vector2( -55, -15 )
antialiased = true
polygon = PoolVector2Array( 0, 30, 110, 30, 110, 0, 0, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
hover_offset = 10.0
idle_x = 0.381836
idle_y = 0.800781

[node name="Label" type="Label" parent="."]
margin_left = -184.0
margin_top = -8.0
margin_right = 186.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.486275, 0.639216, 1, 1 )
text = "Wow, what a so very long question this is! How convenient!"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 1 )
anims/Hover = SubResource( 2 )

[node name="AnimationPlayerIdle" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 3 )

[node name="AnimationPlayerHover" type="AnimationPlayer" parent="."]
anims/Hover = SubResource( 4 )

[node name="AreaHover" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaHover"]
shape = SubResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="mouse_entered" from="AreaHover" to="." method="_on_AreaHover_mouse_entered"]
[connection signal="mouse_exited" from="AreaHover" to="." method="_on_AreaHover_mouse_exited"]
